# SimplePlanePlatform

./: .gitignore  README.md  pom.xml  restore-dns.sh  start-tun.sh
.github/workflows/: android-core.yml  release.yml  tests.yml
android-app/: build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
dashboard/: BACKEND.md  FRONTEND.md  package.json  server.js
dashboard/test/: api-routes.test.js  server.test.js  setup-status.test.js
desktop/docs/: auto-updater-plan.md  auto-updater-tasks.md
desktop/scripts/: build-jre.ps1  build-jre.sh  collect-resources.ps1  collect-resources.sh
desktop/specs/: design.md  requirements.md  tasks.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: .gitignore
desktop/src-tauri/src/: commands.rs  config.rs  dns.rs  logs.rs  main.rs  process.rs  proxy.rs  state.rs
desktop/tests/: updater-smoke.sh
desktop/web/: app.js  index.html  style.css
docker/: proxy.yml
docs/: 桌面安装包打包方案设计.md  测试体系与方法论.md  项目测试计划与清单.md
docs/design/: android-client-plan.md  android-client-tasks.md  backpressure-design.md  (+3 more)
plane-core/: Cargo.toml  build.rs
proxy-exchange/: pom.xml
proxy-local/: pom.xml
proxy-remote/: pom.xml  proxy-remote.service
scripts/: build-rust.sh  proxy-ctl.sh  start-remote-test.sh  update-cn-ip.ps1
tun-adapter/: Cargo.toml
tun-adapter/.cargo/: config.toml
tun-adapter/config/: tun.toml
tun-adapter/src/: config.rs  error.rs  fake_dns.rs  main.rs  route_guard.rs  router.rs  socks5.rs  stack.rs  tun_device.rs
tun-adapter/tests/: integration_test.rs
(+68 files in other folders)
